[tool.poetry]
name = "toolchest-client"
version = "0.7.39"
description = "Python client for Toolchest"
authors = [
    "Bryce Cai <bcai@trytoolchest.com>",
    "Noah Lebovic <nlebovic@trytoolchest.com",
]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/trytoolchest/toolchest-client-python"
repository = "https://github.com/trytoolchest/toolchest-client-python"
documentation = "https://toolchest-python-client.readthedocs.io/en/latest/"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [
    { include = "toolchest_client" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/trytoolchest/toolchest-client-python/issues"

[tool.poetry.dependencies]
boto3 = "^1.18.29"
python = "^3.6"
requests = "^2.25.1"
python-dotenv = "^0.18.0"
pysam = { version = "^0.16.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'" }
importlib-metadata = { version = "~=1.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "prod-pypi"
url = "https://upload.pypi.org/legacy/"
secondary = true

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
