[metadata]
name = toolchest_client
version = 0.1.0
author = Bryce Cai
author_email = noah@toolche.st
description = Python Client for Toolchest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trytoolchest/toolchest-client-python
project_urls =
    Bug Tracker = https://github.com/trytoolchest/toolchest-client-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
