[metadata]
name = toolchest_client
version = 0.1.11
author = Bryce Cai
author_email = bcai@trytoolchest.com
description = Python Client for Toolchest
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trytoolchest/toolchest-client-python
project_urls =
    Bug Tracker = https://github.com/trytoolchest/toolchest-client-python/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = toolchest_client
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    requests >=2.25.1
